Bug 550723: Properly support the CLEAR operator for D2D surfaces. r=jrmuizel